Changelog for Miosix np embedded OS

v1.57
- Fixed a tricky bug in the AuxiliaryTimer implementation for the stm32 arch.
  The prescaler of that timer has a shadow register, and under some timing
  conditions the new prescaler value never made it through the real prescaler,
  resulting in burst values ~700 times less than the value computed by the
  control scheduler. Fixed by forced flush of the prescaler to the shadow
  register.
- Added optional feedforward to control scheduler, defaults to active
  for faster dynamic performance with thread blocking
- Added Scheduler::IRQwaitStatusHook() to inform the scheduler of thread
  blocking
- Added sched_types.h, and separated each *_scheduler.h with an header files
  containing the definition of the SchedData and Priority classes
- Added parameters.h with all control based parameters.

v1.56
- Fixed some bugs in EDF scheduler, found by testsuite.
- Adapted testsuite to work with EDF scheduler.
- Removed configuration option EXIT_ON_HEAP_FULL because since STL containers
  are used in the kernel, there is no more choice: if exceptions are enabled
  on heap full malloc returns NULL and operator new throws bad_alloc, while
  if exceptions are disabled on heap full a reboot is performed, to prevent
  undefined behaviour in STL containers due to operator new not throwing.
- Some code cleanup in the Mutex class.
- Fixed a bug in the priority inheritance mechanism, fixed and added
  a test in the testsuite.
- Removed priority_queue.h and associated test in testsuite.
- Modified Mutex class to use the max heap implementation of the STL.
- Improved preemption points for EDF scheduler.
- Modifed Thread::wakeup(). Now it can no longer be called with the kernel
  paused. Added Thread::PKwakeup() that can be called with the kernel paused.
- Added preemption points in Thread::create(), Thread::setPriority() and
  Thread::wakeup(), active if the EDF scheduler is selected.